--- a/Jingburger.html
+++ b/Jingburger.html
@@ -32,6 +32,9 @@
       <ul>※ 영상 제공 해주신분들 감사합니다</ul>
       
       <ul>※ 1일 업로드 제한으로 인해 하루에 약 10개 내외의 영상만이 업데이트 됩니다</ul>
+	  
+ 	  <ul>※  사실상 방치 상태입니다만 방주가 셧다운 되면서 다시 가동할지도?
+			 그리고 최근 거의 테러에 가까울 정도로 다운로드 시도하시는 분이 계서서 한동안 다운로드는 잠궈놓습니다
      </nav>
     
     <p>　</p>
@@ -184,7 +187,7 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/6231516" target="_blank">26일</a> - </a href="" target="_blank">무!!!!!!!!!</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6257130" target="_blank">28일</a> - <a href="https://youtu.be/1rHHDYLgyI8" target="_blank">이따 이세돌 미연시 (발로란트 , 징페이스 판타지 , 이세돌 미연시)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6273784" target="_blank">29일</a> - <a href="https://youtu.be/kumaMEVpKpk" target="_blank">천하제일투견대회~ (마크 투켠 대회 , 발로란트 , 징보이 단체 관람)</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/6288180" target="_blank">30일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/QbjYJPOco" target="_blank">인급동 감사합ㄴㅣ다 흑흑,,~!!!★ (오라버거 징보이 칭찬  ,VRChat 기네스 풀트 , 톰보이 비하인드 , 풀트 노래뱅)/ 민수데이</a></ul>
+          <ul></a href="https://cafe.naver.com/steamindiegame/6288180" target="_blank">30일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/QbjYJPOco" target="_blank">인급동 감사합ㄴㅣ다 흑흑,,~!!!★ (오라버거 징보이 칭찬  ,VRChat 기네스 풀트 , 톰보이 비하인드 , 풀트 노래뱅)/ 민수데이</a></ul>
 
         </ul>
 
@@ -195,7 +198,7 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/6333343" target="_blank">02일</a> - <a href="https://youtu.be/CZhS79HCqz4" target="_blank">근육통 레게노 (헬스가리 , 밥버거 센세 - 주르르 2편)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6354121" target="_blank">04일</a> - </a href="" target="_blank">일이 너무 많아요옹 잰잰 일뱅! 🤪</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6382138" target="_blank">05일</a> - <a href="https://youtu.be/q_knFAmuEbY" target="_blank">왁타버스 고멤가요제 드래푸또 (고멤가요제 드래프트 , 마지막 재회 같이보기 , 또 나만 빼고 떡볶이)</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/6396990" target="_blank">06일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/AZbn7QiW0" target="_blank">비오는 월요일,,,오늘은 민수데이입니다 ^^ !민수데이★ (발로란트 , 민수데이 3회차 - 애니 오프닝 월드컵 128강) </a></ul>
+          <ul></a href="https://cafe.naver.com/steamindiegame/6396990" target="_blank">06일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/AZbn7QiW0" target="_blank">비오는 월요일,,,오늘은 민수데이입니다 ^^ !민수데이★ (발로란트 , 민수데이 3회차 - 애니 오프닝 월드컵 128강) </a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6426514" target="_blank">08일</a> - </a href="" target="_blank">후후후,,,</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6446017" target="_blank">09일</a> - <a href="https://youtu.be/VxJJ8LKvhC8" target="_blank">3시 버거싶은 밤 잔잔 라디오 (버거싶은 밤 1화)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6453440" target="_blank">10일</a> - </a href="" target="_blank">ㅇ<-<</a></ul>
@@ -233,7 +236,7 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/6964102" target="_blank">20일</a> - <a href="https://youtu.be/x85Fvw86AD8" target="_blank">헉! (29시간 방송 1부 , 징냥이 , Stray , 게임가리)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6964269" target="_blank">21일</a> - <a href="https://youtu.be/hvbriNQ70GY" target="_blank">후열 잰잰 래프트1 (29시간 방송 1부의 연장 , 삐 처리 없는 징보이 , 10분 방송)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6964376" target="_blank">21일</a> - <a href="https://youtu.be/XyFgBwYVnV0" target="_blank">후열 잰잰 래프트2 (29시간 방송 1부의 끝과 2부의 시작 , 똥강아지 기강잡기 , 춘식님 노래듣고 운 징버거 , 래프트 시작하자마자 튕기기)</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/6964376" target="_blank">21일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/xQQ07q2dX" target="_blank">후열 잰잰 래프트(진짜2)★ (29시간 방송 2부 징동부 래프트 엔딩 ,10만원 럭키박스 , 3부 폴가이즈 , 4부 스타크래프트 노래 맞추기 유즈맵 , 이 영상 19시간(50GB))</a></ul>
+          <ul></a href="https://cafe.naver.com/steamindiegame/6964376" target="_blank">21일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/xQQ07q2dX" target="_blank">후열 잰잰 래프트(진짜2)★ (29시간 방송 2부 징동부 래프트 엔딩 ,10만원 럭키박스 , 3부 폴가이즈 , 4부 스타크래프트 노래 맞추기 유즈맵 , 이 영상 19시간(50GB))</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/7022116" target="_blank">25일</a> - <a href="https://youtu.be/RZ1wfh77CX0" target="_blank">포맷성공^_% v (무에타이 은둔 고수 징버거 , 오라버거 썰 , 형 생일 축하 썰 , 29시간 방송 뒤 형뱅 보고 로아 , 둘째가 생각하는 첫째 , 애니 더빙 노래 월드컵 128강 1부)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/7022116" target="_blank">26일</a> - <a href="https://youtu.be/HNyafRnvbR8" target="_blank">애니 더빙 노래 월드컵 (급발진 노래방 주의)● (애니 더빙 노래 월드컵 128강 2부 , 노래뱅)(저작권 크리 음원교체 1구간 영상짜르기 2구간)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/7089005" target="_blank">28일</a> - <a href="https://youtu.be/ImGlD-94XXU" target="_blank">6시 세븐나이츠 레볼루션(광고) (세나버거 , 세븐나이츠 : 레볼루션 광고 , 포도알 케이크 소식에 기쁨 , 클리셰모음 더빙 , 홍머기질 썰 , 이세돌 욕설모음 영상 반응 , 노래뱅)</a></ul>
@@ -253,14 +256,14 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/7167268" target="_blank">07일</a> - <a href="https://youtu.be/bzZ4W74L3Jg" target="_blank">전장에서 패배하고 먹는 눈물젖은 군대리아 집에서 먹기 (군필버거 전신 , 군대리아 , 오라버거 별사탕 , BOB 같이보기 4화)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/7184746" target="_blank">07일</a> - </a href="https://youtu.be/cHEdGrexwIg" target="_blank">아아~ 좋은 주말데수와 (베스킨라빈스 노가리 , NECK:WIND 감상 , 23살 왁굳과 16살 천양 토크온 , 류제홍님에게 칭찬받은 버거넴 , 별나무 카페 후기 관람 , IB , 이세돌 명언 월드컵 , 페이셜두 , 노래뱅)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/7192549" target="_blank">09일</a> - <a href="https://youtu.be/5dJk8s058rc" target="_blank">엄청나게 짧은 (뉴버거 디자인 공개 , 이세돌 칭찬감옥 그루밍)</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/7234206" target="_blank">11일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/7Y2ZKW7ok" target="_blank">뱅온★ (불량식품 노가리 , 이제 누가 언니지? 리믹스 리액션 , VRChat 맵탐방 , VRChat 노래뱅 , 딸기커피 반응 , 로스트아크 , 일기 작성 , 조카랑 놀아주는 썰)(저작권 이슈)</a></ul>
+          <ul></a href="https://cafe.naver.com/steamindiegame/7234206" target="_blank">11일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/7Y2ZKW7ok" target="_blank">뱅온★ (불량식품 노가리 , 이제 누가 언니지? 리믹스 리액션 , VRChat 맵탐방 , VRChat 노래뱅 , 딸기커피 반응 , 로스트아크 , 일기 작성 , 조카랑 놀아주는 썰)(저작권 이슈)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/7265628" target="_blank">13일</a> - <a href="https://youtu.be/ia9OiO2FiWE" target="_blank">ㅎㅇ (VRChat 풀트버거 버추얼 마켓 탐방)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/7265691" target="_blank">14일</a> - <a href="https://youtu.be/18z2SDMiHbA" target="_blank">밤바다...잔잔,.....●(멜리고(페이셜+핸드 트래킹) 버거 , 뉴아바타 , 노래뱅)(저작권 크리 4구간 짜름)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/7301059" target="_blank">17일</a> - <a href="https://youtu.be/X2urlAxRYfU" target="_blank">김밥먹는소리 (VRChat 버추얼 마켓 탐방 2차 , 폴가이즈 , 뱅종곡 - 애상)</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/7313599" target="_blank">18일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/MVjtoIZmk" target="_blank">죠은밤데수와~ (팬게임 - 징버거 밈 피하기 , 나(루토)가리 , 밥버거 센세 - 주르르 4편(채신기술 도입) ,이세돌 1주년 - 소녀와 마법의 공간 M/V,  로스트아크)</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/7329247" target="_blank">20일</a> - <a href="https://youtu.be/VN3L1uY0GLM" target="_blank">3시) ★광고☆ NARAKA : Bladepoint 스쿼드 대회 징버거 시점 (이세돌 합방(고,릴,징) - 나라카 블레이드 , 오니 버거 , 노래뱅 , 징끼얏호우~!)</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/7380383" target="_blank">24일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/DeTeA9nfk" target="_blank">나 시간잉 없어~~~~~~~~~~~~~~~★ ( 마크 모시깽단 모집 , 콩 먹는 비챤 칭찬 , Cult of the Lamb)</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/7392329" target="_blank">25일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/YEeBDD0MC" target="_blank">잔잔수련의방★ (팬덤전쟁 대비 훈련 , Cult of the Lamb完) </a></ul>
+          <ul></a href="https://cafe.naver.com/steamindiegame/7329247" target="_blank">20일</a> - <a href="https://youtu.be/VN3L1uY0GLM" target="_blank">3시) ★광고☆ NARAKA : Bladepoint 스쿼드 대회 징버거 시점 (이세돌 합방(고,릴,징) - 나라카 블레이드 , 오니 버거 , 노래뱅 , 징끼얏호우~!)</a></ul>
+          <ul></a href="https://cafe.naver.com/steamindiegame/7380383" target="_blank">24일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/DeTeA9nfk" target="_blank">나 시간잉 없어~~~~~~~~~~~~~~~★ ( 마크 모시깽단 모집 , 콩 먹는 비챤 칭찬 , Cult of the Lamb)</a></ul>
+          <ul></a href="https://cafe.naver.com/steamindiegame/7392329" target="_blank">25일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/YEeBDD0MC" target="_blank">잔잔수련의방★ (팬덤전쟁 대비 훈련 , Cult of the Lamb完) </a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/7402288" target="_blank">26일</a> - <a href="https://youtu.be/0CPkL8pIuEQ" target="_blank">1주년 기모띠 (이세계 아이돌 1주년 , 1주년 기념 코스튬 , 3분할 버거 , BOB 같이보기 5화)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/7433829" target="_blank">29일</a> - <a href="https://youtu.be/Jcz1wBJgBwQ" target="_blank">포도알님 저 징버거인데 저는 케이크 사게해주세요 라는 슬픈이야기 (이세돌 사망 월드컵 128강 , 폴가이즈 , 노래뱅)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/7450697" target="_blank">30일</a> - <a href="https://youtu.be/7NGHiSFFBSM" target="_blank">안녕하세용 징버거에용 (징끼얏호우~! , GTA5 1편)</a></ul>
