--- a/Viichan.html
+++ b/Viichan.html
@@ -531,15 +531,15 @@
        <ul><a href="https://cafe.naver.com/steamindiegame/9270268" target="_blank">08일</a> - <a href="https://youtu.be/7k0yGM7J6Og" target="_blank"> 4시 반) 체인소맨 보기◆</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/9303002" target="_blank">11일</a> - </a href="" target="_blank"> 쿨하네요◆</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/9331963" target="_blank">13일</a> - </a href="" target="_blank"> 쿨걸등장 (not 쿨피스)◆</a></ul>
-       <ul><a href="" target="_blank">14일</a> - <a href="" target="_blank">토요일조앙~~~~~~~~</a></ul>
-       <ul><a href="" target="_blank">15일</a> - <a href="" target="_blank">12시에 도망가는 사람</a></ul>
-       <ul><a href="" target="_blank">16일</a> - <a href="" target="_blank"></a>축하 감사드립니다...</ul>
-       <ul><a href="" target="_blank">18일</a> - <a href="" target="_blank">안녕하세욥!!!!!!!!!!!</a></ul>	   
-       <ul><a href="" target="_blank">20일</a> - <a href="" target="_blank">엄청 추운날~~~~</a></ul>	   
+       <ul><a href="" target="_blank">14일</a> - </a href="" target="_blank">토요일조앙~~~~~~~~</a></ul>
+       <ul><a href="" target="_blank">15일</a> - </a href="" target="_blank">12시에 도망가는 사람</a></ul>
+       <ul><a href="" target="_blank">16일</a> - </a href="" target="_blank">축하 감사드립니다...</a></ul>
+       <ul><a href="" target="_blank">18일</a> - </a href="" target="_blank">안녕하세욥!!!!!!!!!!!</a></ul>	   
+       <ul><a href="" target="_blank">20일</a> - </a href="" target="_blank">엄청 추운날~~~~</a></ul>	   
        <ul><a href="" target="_blank">21일</a> - </a href="" target="_blank">설날 기념 챤니티</a></ul>	   
        <ul><a href="" target="_blank">23일</a> - </a href="" target="_blank">설날이당~</a></ul>	   
        <ul><a href="" target="_blank">24일</a> - </a href="" target="_blank">까치까치~ 설날은~</a></ul>	   
-       <ul><a href="" target="_blank">27일</a> - <a href="" target="_blank">오직 운 방송</a></ul>	   
+       <ul><a href="" target="_blank">27일</a> - </a href="" target="_blank">오직 운 방송</a></ul>	   
        <ul><a href="" target="_blank">28일</a> - </a href="" target="_blank">토요일오후에는!?!?!?!</a></ul>	   
        <ul><a href="" target="_blank">31일</a> - </a href="" target="_blank">이세돌 합방!!!!!!!!!</a></ul>	   
 
@@ -548,22 +548,22 @@
 
 
     <ul>02월 - <a href="" target="_blank">-
-       <ul><a href="" target="_blank">01일</a> - <a href="" target="_blank">안녕하심니까</a></ul>
-       <ul><a href="" target="_blank">04일</a> - <a href="" target="_blank">행복한 주말이에요</a></ul>
-       <ul><a href="" target="_blank">05일</a> - <a href="" target="_blank">당신의 라니에게 투표하세요</a></ul>
-       <ul><a href="" target="_blank">07일</a> - <a href="" target="_blank">두근두근 화요 비챤</a></ul>
-       <ul><a href="" target="_blank">08일</a> - <a href="" target="_blank">윙가르디움 레비오우사</a></ul>
+       <ul><a href="" target="_blank">01일</a> - </a href="" target="_blank">안녕하심니까</a></ul>
+       <ul><a href="" target="_blank">04일</a> - </a href="" target="_blank">행복한 주말이에요</a></ul>
+       <ul><a href="" target="_blank">05일</a> - </a href="" target="_blank">당신의 라니에게 투표하세요</a></ul>
+       <ul><a href="" target="_blank">07일</a> - </a href="" target="_blank">두근두근 화요 비챤</a></ul>
+       <ul><a href="" target="_blank">08일</a> - </a href="" target="_blank">윙가르디움 레비오우사</a></ul>
        <ul><a href="" target="_blank">10일</a> - </a href="" target="_blank">늦어서좌성합니다!!!!!!!!</a></ul>
        <ul><a href="" target="_blank">12일</a> - </a href="" target="_blank">살짝 늦습니다..!!!</a></ul>
        <ul><a href="" target="_blank">14일</a> - </a href="" target="_blank">초코 라타타타타</a>~</ul>
-       <ul><a href="" target="_blank">17일</a> - <a href="" target="_blank">6시반) 비챤을 찾아라</a></ul>
-       <ul><a href="" target="_blank">18일</a> - <a href="" target="_blank">챤하루~~~~~~~~~~</a></ul>
-       <ul><a href="" target="_blank">19일</a> - <a href="" target="_blank">오늘 뱅송 함니다</a></ul>
-       <ul><a href="" target="_blank">21일</a> - <a href="" target="_blank">화요일이자나</a></ul>
-       <ul><a href="" target="_blank">22일</a> - <a href="" target="_blank">두둥등챤</a></ul>
-       <ul><a href="" target="_blank">24일</a> - <a href="" target="_blank">불금 가봅시댜</a></ul> 
-       <ul><a href="" target="_blank">25일</a> - <a href="" target="_blank">잎하</a></ul>
-       <ul><a href="" target="_blank">28일</a> - <a href="" target="_blank">2월의 마지막~~</a></ul>
+       <ul><a href="" target="_blank">17일</a> - </a href="" target="_blank">6시반) 비챤을 찾아라</a></ul>
+       <ul><a href="" target="_blank">18일</a> - </a href="" target="_blank">챤하루~~~~~~~~~~</a></ul>
+       <ul><a href="" target="_blank">19일</a> - </a href="" target="_blank">오늘 뱅송 함니다</a></ul>
+       <ul><a href="" target="_blank">21일</a> - </a href="" target="_blank">화요일이자나</a></ul>
+       <ul><a href="" target="_blank">22일</a> - </a href="" target="_blank">두둥등챤</a></ul>
+       <ul><a href="" target="_blank">24일</a> - </a href="" target="_blank">불금 가봅시댜</a></ul> 
+       <ul><a href="" target="_blank">25일</a> - </a href="" target="_blank">잎하</a></ul>
+       <ul><a href="" target="_blank">28일</a> - </a href="" target="_blank">2월의 마지막~~</a></ul>
 
     </ul>
        
@@ -574,50 +574,51 @@
 <p>　</p>
 
     <ul>03월 - </a href="" target="_blank">-</a>
-       <ul><a href="" target="_blank">01일</a> - <a href="" target="_blank">오늘부터 1일~~~~~~ (3월)</a></ul>
-       <ul><a href="" target="_blank">03일</a> - </a href=0" target="_blank">AI 오타쿠만들기</a></ul>
-       <ul><a href="" target="_blank">04일</a> - <a href="" target="_blank">늘 같은 곳을~</a></ul>
-       <ul><a href="" target="_blank">06일</a> - <a href="" target="_blank">6시 반) 붕괴 3rd 광고 커버곡</a></ul>
-       <ul><a href="" target="_blank">08일</a> - <a href="" target="_blank">VR챗~~~~</a></ul>
-       <ul><a href="" target="_blank">10일</a> - <a href="" target="_blank">겜이땡기는 날이구만</a></ul>
+       <ul><a href="" target="_blank">01일</a> - </a href="" target="_blank">오늘부터 1일~~~~~~ (3월)</a></ul>
+       <ul><a href="" target="_blank">03일</a> - </a href="" target="_blank">AI 오타쿠만들기</a></ul>
+       <ul><a href="" target="_blank">04일</a> - </a href="" target="_blank">늘 같은 곳을~</a></ul>
+       <ul><a href="" target="_blank">06일</a> - </a href="" target="_blank">6시 반) 붕괴 3rd 광고 커버곡</a></ul>
+       <ul><a href="" target="_blank">08일</a> - </a href="" target="_blank">VR챗~~~~</a></ul>
+       <ul><a href="" target="_blank">10일</a> - </a href="" target="_blank">겜이땡기는 날이구만</a></ul>
        <ul><a href="" target="_blank">11일</a> - </a href="" target="_blank">일요일조와~~~</a></ul>
        <ul><a href="" target="_blank">12일</a> - </a href="" target="_blank">화이투데이~~~</a></ul>
-       <ul><a href="" target="_blank">14일</a> - <a href="" target="_blank">HIHIHIHIHIHI</a></ul>
-       <ul><a href="" target="_blank">15일</a> - <a href="" target="_blank">[광고] 카트라이더 킹제합방~!!!</a></ul>
-       <ul><a href="" target="_blank">17일</a> - <a href="" target="_blank">7시) 비챤의 시간을 뺏어라</a></ul></ul>
-       <ul><a href="" target="_blank">18일</a> - <a href="" target="_blank">6시반) 비챤의 작명소</a></ul>	   
-       <ul><a href="" target="_blank">19일</a> - <a href="" target="_blank">행복한 하루 보내세요~~~</a></ul>	   
+       <ul><a href="" target="_blank">14일</a> - </a href="" target="_blank">HIHIHIHIHIHI</a></ul>
+       <ul><a href="" target="_blank">15일</a> - </a href="" target="_blank">[광고] 카트라이더 킹제합방~!!!</a></ul>
+       <ul><a href="" target="_blank">17일</a> - </a href="" target="_blank">7시) 비챤의 시간을 뺏어라</a></ul></ul>
+       <ul><a href="" target="_blank">18일</a> - </a href="" target="_blank">6시반) 비챤의 작명소</a></ul>	   
+       <ul><a href="" target="_blank">19일</a> - </a href="" target="_blank">행복한 하루 보내세요~~~</a></ul>	   
        <ul><a href="" target="_blank">22일</a> - </a href="" target="_blank">핫걸의 금요일</a></ul>	   
        <ul><a href="" target="_blank">24일</a> - </a href="" target="_blank">이세계 벚꽃놀이~~</a></ul>	   
        <ul><a href="" target="_blank">26일</a> - </a href="" target="_blank">까치까치~ 설날은~</a></ul>	   
 
 	
+	</ul>
 <p><br></p>
 
 
 <p>　</p>
 
     <ul>04월 - </a href="" target="_blank">-</a>
-       <ul><a href="" target="_blank">01일</a> - <a href="" target="_blank">[이세계 F6 빛찬] 길을 잃었나요? (알림창X)</a></ul>
-       <ul><a href="" target="_blank">02일</a> - </a href=0" target="_blank">다녀왔습니다~!</a></ul>
-       <ul><a href="" target="_blank">05일</a> - <a href="" target="_blank">밀린 숙제 하는날~~~</a></ul>
-       <ul><a href="" target="_blank">07일</a> - <a href="" target="_blank">오타쿠뱅온</a></ul>
-       <ul><a href="" target="_blank">08일</a> - <a href="" target="_blank">10시) 뮤프핵 발표</a></ul>
-       <ul><a href="" target="_blank">09일</a> - <a href="" target="_blank">6시) V급밴드 오디션</a>~</ul>
+       <ul><a href="" target="_blank">01일</a> - </a href="" target="_blank">[이세계 F6 빛찬] 길을 잃었나요? (알림창X)</a></ul>
+       <ul><a href="" target="_blank">02일</a> - </a href="" target="_blank">다녀왔습니다~!</a></ul>
+       <ul><a href="" target="_blank">05일</a> - </a href="" target="_blank">밀린 숙제 하는날~~~</a></ul>
+       <ul><a href="" target="_blank">07일</a> - </a href="" target="_blank">오타쿠뱅온</a></ul>
+       <ul><a href="" target="_blank">08일</a> - </a href="" target="_blank">10시) 뮤프핵 발표</a></ul>
+       <ul><a href="" target="_blank">09일</a> - </a href="" target="_blank">6시) V급밴드 오디션</a>~</ul>
        <ul><a href="" target="_blank">12일</a> - </a href="" target="_blank">반갑슈요일~~~~~~~~</a></ul>
        <ul><a href="" target="_blank">15일</a> - </a href="" target="_blank">하이하이 입니다~~~</a></ul>
-       <ul><a href="" target="_blank">16일</a> - <a href="" target="_blank">3시) 애니 같이보기~~~</a></ul>
-       <ul><a href="" target="_blank">18일</a> - <a href="" target="_blank">비챤 유튜브 탐방하기</a></ul>
-       <ul><a href="" target="_blank">19일</a> - <a href="" target="_blank">안녕하수요</a></ul>
-       <ul><a href="" target="_blank">22일</a> - <a href="" target="_blank">7시) 도전! 라니벨2 안전수칙편</a></ul>	   
-       <ul><a href="" target="_blank">23일</a> - <a href="" target="_blank">7시) Tot Musica 커버곡 공개</a></ul>	   
+       <ul><a href="" target="_blank">16일</a> - </a href="" target="_blank">3시) 애니 같이보기~~~</a></ul>
+       <ul><a href="" target="_blank">18일</a> - </a href="" target="_blank">비챤 유튜브 탐방하기</a></ul>
+       <ul><a href="" target="_blank">19일</a> - </a href="" target="_blank">안녕하수요</a></ul>
+       <ul><a href="" target="_blank">22일</a> - </a href="" target="_blank">7시) 도전! 라니벨2 안전수칙편</a></ul>	   
+       <ul><a href="" target="_blank">23일</a> - </a href="" target="_blank">7시) Tot Musica 커버곡 공개</a></ul>	   
        <ul><a href="" target="_blank">25일</a> - </a href="" target="_blank">이세돌 드레드헝거 합방~!!!!</a></ul>	   
        <ul><a href="" target="_blank">26일</a> - </a href="" target="_blank">커버곡에 대한 고찰</a></ul>	   
        <ul><a href="" target="_blank">28일</a> - </a href="" target="_blank">10시) 이세돌 합방~</a></ul>	   
-       <ul><a href="" target="_blank">29일</a> - <a href="" target="_blank">하핫 나는 비챤이라고한다~!</a></ul>	   
+       <ul><a href="" target="_blank">29일</a> - </a href="" target="_blank">하핫 나는 비챤이라고한다~!</a></ul>	   
        <ul><a href="" target="_blank">30일</a> - </a href="" target="_blank">태양을 피하고 싶어서~</a></ul>	   
 
-	
+	</ul>
 <p><br></p>
 
 
@@ -647,7 +648,7 @@
        <ul><a href="" target="_blank">30일</a> - </a href="" target="_blank">9시) 복싱 합방 ~!</a></ul>	   
        <ul><a href="" target="_blank">31일</a> - </a href="" target="_blank">구독티콘, 도네이션 리뉴얼</a></ul>	
 
-	   
+	</ul>
 <p><br></p>
 
 
@@ -678,6 +679,7 @@
        <ul><a href="" target="_blank">28일</a> - </a href="" target="_blank">즐거운 수요일~~~</a></ul>	   
        <ul><a href="" target="_blank">30일</a> - </a href="" target="_blank">6월아 가지마~~~~~</a></ul>	   
 	
+	</ul>
 <p><br></p>
 
 
@@ -703,7 +705,7 @@
        <ul><a href="" target="_blank">28일</a> - </a href="" target="_blank">야호~~ 금요일이당</a></ul>	   
        <ul><a href="" target="_blank">30일</a> - </a href="" target="_blank">왕짧게 생존신고!!!!</a></ul>	   
 
-	
+	</ul>
 <p><br></p>
 
 
@@ -728,7 +730,7 @@
        <ul><a href="" target="_blank">27일</a> - </a href="" target="_blank">가장 노곤한 시간이닷!!</a></ul>	   
        <ul><a href="" target="_blank">30일</a> - </a href="" target="_blank">자고 일어났더니 빌보드에 있었따...</a></ul>	   
 
-	
+	</ul>
 <p><br></p>
 
 <p>　</p>
@@ -753,7 +755,7 @@
        <ul><a href="" target="_blank">27일</a> - </a href="" target="_blank">7시반) 성대모사 LOL편</a></ul>	   
        <ul><a href="" target="_blank">28일</a> - </a href="" target="_blank">6시) 추석맞이 챤니티 달나라 여행</a></ul>	   
 
-	
+	</ul>
 <p><br></p>
 
 <p>　</p>
@@ -774,6 +776,7 @@
        <ul><a href="" target="_blank">21일</a> - </a href="" target="_blank">마이크 테스트~~</a></ul>	   
        <ul><a href="" target="_blank">22일</a> - </a href="" target="_blank">두둥등챤~~~~</a></ul>	   
 
+	</ul>
 <p><br></p>
 
 <p>　</p>
@@ -796,7 +799,7 @@
        <ul><a href="" target="_blank">26일</a> - </a href="" target="_blank">챠니와써욘</a></ul>	   
        <ul><a href="" target="_blank">29일</a> - </a href="" target="_blank">겨울이다~~</a></ul>	      
 
-	
+	</ul>
 <p><br></p>
 
 <p>　</p>
@@ -820,7 +823,7 @@
        <ul><a href="" target="_blank">30일</a> - </a href="" target="_blank">챠니등장~</a></ul>	   
        <ul><a href="" target="_blank">31일</a> - </a href="" target="_blank">마지막 방송~~~</a></ul>	   
 
-	
+	</ul>
 <p><br></p>
 
 <p>　</p>
@@ -847,7 +850,7 @@
        <ul><a href="" target="_blank"></a> - </a href="" target="_blank"></a></ul>	   
        <ul><a href="" target="_blank"></a> - </a href="" target="_blank"></a></ul>	   
 
-	
+	</ul>
 <p><br></p>
 
 
@@ -874,7 +877,7 @@
        <ul><a href="" target="_blank">28일</a> - </a href="" target="_blank"></a></ul>	   
        <ul><a href="" target="_blank">31일</a> - </a href="" target="_blank"></a></ul>	   
 
-	
+	</ul>
 <p><br></p>
 
 <p>　</p>
@@ -900,7 +903,7 @@
        <ul><a href="" target="_blank">28일</a> - </a href="" target="_blank"></a></ul>	   
        <ul><a href="" target="_blank">31일</a> - </a href="" target="_blank"></a></ul>	   
 
-	
+	</ul>
 <p><br></p>
 
 
