--- a/Viichan.html
+++ b/Viichan.html
@@ -521,7 +521,13 @@
 <p><br></p>
 
 <p>　</p>
-      <div>2023년</div>
+
+<br>
+
+<details>
+
+
+      <summary>2023년</summary>
     <ul>01월 - </a href="" target="_blank">月刊 ゔぃちゃん 01月号</a>
        <ul><a href="https://cafe.naver.com/steamindiegame/9185153" target="_blank">01일</a> - <a href="https://youtu.be/Rn60LGuT6W0" target="_blank">신년 짧뱅입니다!!!◆ (조회수 1만 이상 클립 모음 , 카레 하나도 안맵네 핫 걸이라면 이정돈 , 으아 매워! , 왁들(빠른관) , 망년회 클립 시청 , 망년회 퓰리처 상 , 르르 기강잡는 세구 클립 , 보..보지마세요 헤..헨따이 , '야 우냐?' , 2022년 아바타 정산(싹싹챤) , 왁타뮤직 12월 넷째주 , 이세돌 비명 모음 , 비챤의 다양한 매력 #shorts , 챤나비를 본 라니 #shorts , 뱅종 단호챤)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/9192926" target="_blank">02일</a> - </a href="https://youtu.be/Rn60LGuT6W0" target="_blank">챤챗내 - 수익 창출 안하고 있었습니다.</a></ul>
@@ -826,6 +832,9 @@
 	</ul>
 <p><br></p>
 
+</details>
+
+<br>
 <p>　</p>
       <div>2024년</div>
 
