--- a/Viichan.html
+++ b/Viichan.html
@@ -53,7 +53,7 @@
     
     <section>
 	
-	<details>
+<details>
       <summary>2021년</summary>
       <ul>8월
        <ul>26일 - <a href="https://youtu.be/XQXg0ktkRRo" target="_blank">[이세돌] 합격</a></ul>
@@ -197,9 +197,13 @@
 
     <p>　</p>
 	
-	</details>
+</details>
 
-      <div>2022년</div>
+	<p>　</p>
+	<br>
+
+<details>
+      <summary>2022년</summary>
         <ul>1월
           <ul><a href="https://cafe.naver.com/steamindiegame/4217292" target="_blank">01일</a> - <a href="https://youtu.be/Z3_KUgG9TvY" target="_blank">임인년 새해 복 많이받으세요~! (한복챤 공개 , 홋치 홋치 하치키타치 , VRChat 풀트뱅 , 전통풍 맵탐방 , 아씨와 나리 상황극 , 노래뱅 , 아이네 링피트 & 릴파 신의 지하실 구경)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4224955" target="_blank">03일</a> - <a href="https://youtu.be/bvn07acAq-s" target="_blank">행복한 월요일 되세요~! (FPS노가리 , 황금 용띠 비챤 , 전화받는 챠니랑 티키타카하는 라니들 , 우주 꿈 노가리 , DAYBREAK FRONTLINE 제작할때 심경(내 미래에 대한 확신이 없었어) , 연공전 게임 - 왁타펜스 하드모드 , 알바 진상 손님 노가리 , 나르 성대모사 , 뱅종곡 - 스물셋)</a></ul>
@@ -518,11 +522,13 @@
        </ul>
 
 
-<p><br></p>
+	<p><br></p>
+</details>
 
-<p>　</p>
 
-<br>
+	<p>　</p>
+
+	<br>
 
 <details>
 
