--- a/Viichan.html
+++ b/Viichan.html
@@ -538,7 +538,7 @@
        <ul><a href="https://cafe.naver.com/steamindiegame/9185153" target="_blank">01일</a> - <a href="https://youtu.be/Rn60LGuT6W0" target="_blank">신년 짧뱅입니다!!!◆ (조회수 1만 이상 클립 모음 , 카레 하나도 안맵네 핫 걸이라면 이정돈 , 으아 매워! , 왁들(빠른관) , 망년회 클립 시청 , 망년회 퓰리처 상 , 르르 기강잡는 세구 클립 , 보..보지마세요 헤..헨따이 , '야 우냐?' , 2022년 아바타 정산(싹싹챤) , 왁타뮤직 12월 넷째주 , 이세돌 비명 모음 , 비챤의 다양한 매력 #shorts , 챤나비를 본 라니 #shorts , 뱅종 단호챤)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/9192926" target="_blank">02일</a> - </a href="https://youtu.be/Rn60LGuT6W0" target="_blank">챤챗내 - 수익 창출 안하고 있었습니다.</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/9222849" target="_blank">04일</a> - <a href="https://youtu.be/z9f1yuIvNaA" target="_blank">하이하이!!!!!!!!!!!!!◆ (청소년 뉴스에 나온 이세돌 , 융터르 커버 - 융챤님 제바알 , 바니 세구 방송사고 클립  , 연말 공모전 팬게임 - 이세돌을 구해줘! , Orbit or Wak beat , 15분 동안 리와인드만 들었어! , 급빡종 선언 , Wakest Dungeon , 똥겜지옥 , 이세돌 윈터스토리 , '너 왜 답장안해?' , 웃긴거 알려드릴까요? , 볼빵빵챤)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/9246562" target="_blank">06일</a> - <a href="https://youtu.be/lP3lVbqBTpg" target="_blank">쿨한 금요일◆ (일본어 발음 잘함(일본 못가봄) , 팬영상 - 비챤섹시 , 방음부스 문 썰 , 서운해 힝힝 , 연말 공모전 팬게임 : 왁제이맥스 , 엘레베이터 초등학생 썰 , 화장품 가리 , 사람 볼 때 손부터 , 목소리 관련 썰 , 노래뱅)</a></ul
+       <ul><a href="https://cafe.naver.com/steamindiegame/9246562" target="_blank">06일</a> - <a href="https://youtu.be/lP3lVbqBTpg" target="_blank">쿨한 금요일◆ (일본어 발음 잘함(일본 못가봄) , 팬영상 - 비챤섹시 , 방음부스 문 썰 , 서운해 힝힝 , 연말 공모전 팬게임 : 왁제이맥스 , 엘레베이터 초등학생 썰 , 화장품 가리 , 사람 볼 때 손부터 , 목소리 관련 썰 , 노래뱅)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/9261087" target="_blank">07일</a> - <a href="https://youtu.be/7WKv6YWV5uI" target="_blank">asmr 도전~◆</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/9270268" target="_blank">08일</a> - <a href="https://youtu.be/7k0yGM7J6Og" target="_blank"> 4시 반) 체인소맨 보기◆</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/9303002" target="_blank">11일</a> - </a href="" target="_blank"> 쿨하네요◆</a></ul>
@@ -596,7 +596,7 @@
        <ul><a href="" target="_blank">12일</a> - </a href="" target="_blank">화이투데이~~~</a></ul>
        <ul><a href="" target="_blank">14일</a> - </a href="" target="_blank">HIHIHIHIHIHI</a></ul>
        <ul><a href="" target="_blank">15일</a> - </a href="" target="_blank">[광고] 카트라이더 킹제합방~!!!</a></ul>
-       <ul><a href="" target="_blank">17일</a> - </a href="" target="_blank">7시) 비챤의 시간을 뺏어라</a></ul></ul>
+       <ul><a href="" target="_blank">17일</a> - </a href="" target="_blank">7시) 비챤의 시간을 뺏어라</a></ul>
        <ul><a href="" target="_blank">18일</a> - </a href="" target="_blank">6시반) 비챤의 작명소</a></ul>	   
        <ul><a href="" target="_blank">19일</a> - </a href="" target="_blank">행복한 하루 보내세요~~~</a></ul>	   
        <ul><a href="" target="_blank">22일</a> - </a href="" target="_blank">핫걸의 금요일</a></ul>	   
